# murodb

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  HANDSOVER.md  Makefile  README.md  lefthook.yml
.github/workflows/: ci.yml  crash-matrix-ci.yml  deploy-docs.yml  nightly-stress.yml
docs/: crash-resilience.md  format-migration.md
docs-site/: book.toml
docs-site/src/: SUMMARY.md  introduction.md  roadmap.md
docs-site/src/getting-started/: first-session.md  installation.md  quick-start.md
docs-site/src/internals/: architecture.md  backup.md  btree.md  catalog-format.md  cryptography.md  durability-matrix.md  files-and-locking.md  foreign-keys.md  formal-verification.md  format-migration.md  fts-internals.md  query-planning.md  reading-guide.md  storage.md  wal.md
specs/tla/: CrashResilience.cfg  CrashResilience.large.cfg  CrashResilience.tla  README.md  run_tlc.sh
src/: error.rs  lib.rs  types.rs
src/btree/: cursor.rs  key_encoding.rs  mod.rs  node.rs  ops.rs
src/concurrency/: mod.rs
src/crypto/: aead.rs  hmac_util.rs  kdf.rs  mod.rs  suite.rs
src/fts/: index.rs  mod.rs  postings.rs  query.rs  scoring.rs  snippet.rs  tokenizer.rs
src/schema/: catalog.rs  column.rs  index.rs  mod.rs
src/sql/: ast.rs  eval.rs  executor.rs  lexer.rs  mod.rs  parser.rs  planner.rs  prepared.rs  session.rs
src/storage/: freelist.rs  mod.rs  overflow.rs  page.rs  page_store.rs  pager.rs
src/tx/: lock_manager.rs  mod.rs  page_store.rs  transaction.rs
src/wal/: mod.rs  reader.rs  record.rs  recovery.rs  writer.rs
tests/: aggregation_tests.rs  alter_table_tests.rs  analyze_tests.rs  backup_tests.rs  basic_crud.rs  btree_property.rs  btree_tests.rs  column_count_tests.rs  composite_key_tests.rs  concurrency_tests.rs  crash_matrix.rs  crash_stress.rs  decimal_tests.rs  empty_table_edge_tests.rs  encryption_tests.rs  explain_tests.rs  float_double_tests.rs  format_migration.rs  fts_limit_tests.rs  fts_overflow_recovery.rs  fts_tests.rs  functions_tests.rs  hex_literal_tests.rs  identifier_limit_tests.rs  index_hint_tests.rs  integer_boundary_tests.rs  join_tests.rs  multi_process_freshness.rs  null_edge_tests.rs  page_boundary_tests.rs  phase1_tests.rs  post_wal_sync_failpoints.rs  prepared_statement_tests.rs  rekey.rs  rowid_tests.rs  select_without_from.rs  sql_fts_tests.rs  subquery_tests.rs  transaction_tests.rs  union_tests.rs  (+7 more)
(+55 files in other folders)
