[package]
name = "murodb"
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["Tokuhiro Matsuno"]
description = "Encrypted embedded SQL database with B-Tree + FTS (Bigram)"

[[bin]]
name = "murodb-wal-inspect"
path = "src/bin/murodb_wal_inspect.rs"

[dependencies]
nom = "7"
aes-gcm-siv = "0.11"
hmac = "0.12"
sha2 = "0.10"
argon2 = "0.5"
unicode-normalization = "0.1"
fs4 = "0.12"
lru = "0.16"
parking_lot = "0.12"
rand = "0.8"
regex = "1"
base64 = "0.22"
zeroize = { version = "1", features = ["derive"] }
thiserror = "2"
clap = { version = "4", features = ["derive"] }
rpassword = "5"
rustyline = "15"

[features]
test-utils = []

[dev-dependencies]
tempfile = "3"

[[test]]
name = "crash_stress"
path = "tests/crash_stress.rs"
harness = false
